--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -57,8 +57,8 @@
 
                 <div class="form-group">
                     <label for="address_line">Address Line:</label>
-                    <input type="text" class="form-control" name="address_line" id="address_line"
-                        value="{{ patient.address[0].line[0] if patient.address else '' }}">
+                    <textarea type="text" class="form-control" rows="3" name="address_line" id="address_line"
+                        value="{{ patient.address[0].line[0] if patient.address else '' }}">{{ patient.address[0].line[0] if patient.address else '' }}</textarea>
                 </div>
 
                 <div class="form-group">
@@ -131,7 +131,6 @@
                         </div>
                     </div>
                     <div class="col-md">
-
                         {% if patient.telecom|length > 1 and not patient.telecom[1].value and patient.telecom[1].system
                         != 'email' %}
                         {% else %}
@@ -150,7 +149,6 @@
                         </div>
                         {% endif %}
                     </div>
-
                 </div>
 
 
