--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -2,12 +2,10 @@
 
 <div class="intro-container">
     <h2 class="header">Patient Clinical Document (FHIR)</h2>
-
-    <div class="card">
-        <div class="card-body">
-            <h2>Data Selection</h2>
-            <div class="column">
-
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h2>Data Selection</h2>
                 <ul>
                     <li><strong>ID:</strong> {{ patient.id }}</li>
                     <li><strong>Name:</strong> {{ patient.name }}</li>
@@ -32,13 +30,22 @@
                     {% endif %}
                     <li><strong>Communication:</strong> {{ patient.communication }}</li>
                     <li><strong>General Practitioner:</strong> {{ patient.general_practitioner}}</li>
-                    <li><strong>Managing Organization:</strong
-                        > {{ patient.managing_organization}}</li>
+                    <li><strong>Managing Organization:</strong> {{ patient.managing_organization}}</li>
                     <li><strong>Link:</strong> {{ patient.link}}</li>
                     <li><strong>Photo:</strong> {{ patient.photo}}</li>
-                    <li><strong>Text:</strong> {{ patient.text}}</li>
-
                 </ul>
+            </div>
+
+            <br>
+            <br>
+
+            <h2>FHIR text</h2>
+            <pre>{{ patient.text|safe }}</pre>
+            <div>
+
+
+                <br>
+                <br>
                 <div class="button-inline">
                     <button onclick="window.location.href='{{ url_for('edit_fhir_patient', patient_id=patient.id) }}'"
                         class="button" type="button">Edit</button>
@@ -52,17 +59,19 @@
         </div>
     </div>
 
-    <div class="card">
-        <div class="card-body">
-            <h2>Result Body Payload</h2>
-            <div class="column">
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h2>Result Body Payload</h2>
                 <pre id="json"></pre>
             </div>
         </div>
-    </div>
 
-    <button class="button" onclick="window.location.href='{{ url_for('fhir_patient_list') }}'">Return</button>
+        <button class="button" onclick="window.location.href='{{ url_for('fhir_patient_list') }}'">Return</button>
+    </div>
 </div>
+
+
 
 <script>
     var data = {{ patient_json| tojson | safe }};
