--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -206,6 +206,7 @@ p.lost {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
 }
 
 .column {
@@ -240,7 +241,16 @@ form .right input {
   align-items: center;
 }
 
-
 .form-group label {
   font-weight: bold;
+}
+
+pre {
+  background-color: #2d2d2d;
+  color: #f8f8f2;
+  padding: 20px;
+  margin-top: 20px;
+  overflow-x: auto;
+  border-radius: 5px;
+  font-family: 'Courier New', Courier, monospace;
 }
