--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -21,7 +21,7 @@
                     <li><strong>Profile:</strong> {{ patient.profile|safe }}</li>
                     <li><strong>Active:</strong> {{ patient.active }}</li>
                 </ul>
-                <br>
+
                 <ul>
                     <li><strong>Marital Status:</strong> {{ patient.marital_status}}</li>
                     <li><strong>Multiple Birth:</strong> {{ patient.multiple_birth}}</li>
@@ -34,26 +34,26 @@
                     <li><strong>Link:</strong> {{ patient.link}}</li>
                     <li><strong>Photo:</strong> {{ patient.photo}}</li>
                 </ul>
-            </div>
-
-            <br>
-            <br>
-
-            <h2>FHIR text</h2>
-            <pre>{{ patient.text|safe }}</pre>
-            <div>
-
 
                 <br>
                 <br>
-                <div class="button-inline">
-                    <button onclick="window.location.href='{{ url_for('edit_fhir_patient', patient_id=patient.id) }}'"
-                        class="button" type="button">Edit</button>
-                    <button class="button"
-                        onclick="window.location.href='{{ url_for('delete_fhir_patient', patient_id=patient.id) }}'"
-                        class="button" type="button">Delete</button>
-                    <button onclick="window.location.href='{{ url_for('fhir_patient_list') }}'" class="button"
-                        type="button">Return</button>
+                <div class="card-body">
+                    <h2>FHIR text</h2>
+                    <div>{{ patient.text|safe }}</div>
+                </div>
+                <br>
+                <br>
+                <div>
+                    <div class="button-inline">
+                        <button
+                            onclick="window.location.href='{{ url_for('edit_fhir_patient', patient_id=patient.id) }}'"
+                            class="button" type="button">Edit</button>
+                        <button class="button"
+                            onclick="window.location.href='{{ url_for('delete_fhir_patient', patient_id=patient.id) }}'"
+                            class="button" type="button">Delete</button>
+                        <button onclick="window.location.href='{{ url_for('fhir_patient_list') }}'" class="button"
+                            type="button">Return</button>
+                    </div>
                 </div>
             </div>
         </div>
