Enhance FHIR patient data model by adding new attributes for better data representation

--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -293,130 +293,105 @@
                             <label for="languages">Languages Spoken</label>
                             <div class="col-md">
                                 <div class="form-group">
-                                    <input class="form-check-input" type="checkbox" id="language_french"
-                                        name="languages" value="french">
+                                    <input class="form-check-input" type="checkbox" id="language_french" name="languages" value="french">
                                     <label class="form-check-label" for="language_french">French</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_italian"
-                                        name="languages" value="italian">
+                                    <input class="form-check-input" type="checkbox" id="language_italian" name="languages" value="italian">
                                     <label class="form-check-label" for="language_italian">Italian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_spanish"
-                                        name="languages" value="spanish">
+                                    <input class="form-check-input" type="checkbox" id="language_spanish" name="languages" value="spanish">
                                     <label class="form-check-label" for="language_spanish">Spanish</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_portuguese"
-                                        name="languages" value="portuguese">
+                                    <input class="form-check-input" type="checkbox" id="language_portuguese" name="languages" value="portuguese">
                                     <label class="form-check-label" for="language_portuguese">Portuguese</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_romanian"
-                                        name="languages" value="romanian">
+                                    <input class="form-check-input" type="checkbox" id="language_romanian" name="languages" value="romanian">
                                     <label class="form-check-label" for="language_romanian">Romanian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_german"
-                                        name="languages" value="german">
+                                    <input class="form-check-input" type="checkbox" id="language_german" name="languages" value="german">
                                     <label class="form-check-label" for="language_german">German</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_english"
-                                        name="languages" value="english">
+                                    <input class="form-check-input" type="checkbox" id="language_english" name="languages" value="english">
                                     <label class="form-check-label" for="language_english">English</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_dutch" name="languages"
-                                        value="dutch">
+                                    <input class="form-check-input" type="checkbox" id="language_dutch" name="languages" value="dutch">
                                     <label class="form-check-label" for="language_dutch">Dutch</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_swedish"
-                                        name="languages" value="swedish">
+                                    <input class="form-check-input" type="checkbox" id="language_swedish" name="languages" value="swedish">
                                     <label class="form-check-label" for="language_swedish">Swedish</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_danish"
-                                        name="languages" value="danish">
+                                    <input class="form-check-input" type="checkbox" id="language_danish" name="languages" value="danish">
                                     <label class="form-check-label" for="language_danish">Danish</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_norwegian"
-                                        name="languages" value="norwegian">
+                                    <input class="form-check-input" type="checkbox" id="language_norwegian" name="languages" value="norwegian">
                                     <label class="form-check-label" for="language_norwegian">Norwegian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_russian"
-                                        name="languages" value="russian">
+                                    <input class="form-check-input" type="checkbox" id="language_russian" name="languages" value="russian">
                                     <label class="form-check-label" for="language_russian">Russian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_polish"
-                                        name="languages" value="polish">
+                                    <input class="form-check-input" type="checkbox" id="language_polish" name="languages" value="polish">
                                     <label class="form-check-label" for="language_polish">Polish</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_czech" name="languages"
-                                        value="czech">
+                                    <input class="form-check-input" type="checkbox" id="language_czech" name="languages" value="czech">
                                     <label class="form-check-label" for="language_czech">Czech</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_slovak"
-                                        name="languages" value="slovak">
+                                    <input class="form-check-input" type="checkbox" id="language_slovak" name="languages" value="slovak">
                                     <label class="form-check-label" for="language_slovak">Slovak</label>
                                 </div>
                             </div>
                             <div class="col-md">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_bulgarian"
-                                        name="languages" value="bulgarian">
+                                    <input class="form-check-input" type="checkbox" id="language_bulgarian" name="languages" value="bulgarian">
                                     <label class="form-check-label" for="language_bulgarian">Bulgarian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_serbian"
-                                        name="languages" value="serbian">
+                                    <input class="form-check-input" type="checkbox" id="language_serbian" name="languages" value="serbian">
                                     <label class="form-check-label" for="language_serbian">Serbian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_croatian"
-                                        name="languages" value="croatian">
+                                    <input class="form-check-input" type="checkbox" id="language_croatian" name="languages" value="croatian">
                                     <label class="form-check-label" for="language_croatian">Croatian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_slovenian"
-                                        name="languages" value="slovenian">
+                                    <input class="form-check-input" type="checkbox" id="language_slovenian" name="languages" value="slovenian">
                                     <label class="form-check-label" for="language_slovenian">Slovenian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_latvian"
-                                        name="languages" value="latvian">
+                                    <input class="form-check-input" type="checkbox" id="language_latvian" name="languages" value="latvian">
                                     <label class="form-check-label" for="language_latvian">Latvian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_lithuanian"
-                                        name="languages" value="lithuanian">
+                                    <input class="form-check-input" type="checkbox" id="language_lithuanian" name="languages" value="lithuanian">
                                     <label class="form-check-label" for="language_lithuanian">Lithuanian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_greek" name="languages"
-                                        value="greek">
+                                    <input class="form-check-input" type="checkbox" id="language_greek" name="languages" value="greek">
                                     <label class="form-check-label" for="language_greek">Greek</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_finnish"
-                                        name="languages" value="finnish">
+                                    <input class="form-check-input" type="checkbox" id="language_finnish" name="languages" value="finnish">
                                     <label class="form-check-label" for="language_finnish">Finnish</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_hungarian"
-                                        name="languages" value="hungarian">
+                                    <input class="form-check-input" type="checkbox" id="language_hungarian" name="languages" value="hungarian">
                                     <label class="form-check-label" for="language_hungarian">Hungarian</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="language_estonian"
-                                        name="languages" value="estonian">
+                                    <input class="form-check-input" type="checkbox" id="language_estonian" name="languages" value="estonian">
                                     <label class="form-check-label" for="language_estonian">Estonian</label>
                                 </div>
                             </div>
