--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -151,6 +151,12 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <input type="checkbox" class="form-check> form-control" name="active" id="active"
+                        value="{{ patient.active }}" {% if patient.active %} checked {% endif %}>
+                    <label for="active">Active</label>
+                </div>
+
 
                 <br>
                 <div class="button-inline">
