Added new list items to the form to represent more of the patient data elements

--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -29,6 +29,12 @@
                     <li><strong>Deceased:</strong> {{ patient.deceased }}</li>
                     {% endif %}
                     <li><strong>Communication:</strong> {{ patient.communication }}</li>
+                    <li><strong>Contact</strong> {{ patient.contact }}</li>
+                    <li><strong>Contact Relationship</strong> {{ patient.contact_relationship }}</li>
+                    <li><strong>Contact Address</strong> {{ patient.contact_address }}</li>
+                    <li><strong>Contact Phone</strong> {{ patient.contact_phone }}</li>
+                    <li><strong>Contact Email</strong> {{ patient.contact_email }}</li>
+
                     <li><strong>General Practitioner:</strong> {{ patient.general_practitioner}}</li>
                     <li><strong>Managing Organization:</strong> {{ patient.managing_organization}}</li>
                     <li><strong>Link:</strong> {{ patient.link}}</li>
