added contact relationship logic to edit form

--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -362,21 +362,20 @@
                                     contact.relationship[0].coding[0].display=='Emergency' %} selected {% endif %}>
                                     {{ contact.relationship[0].coding[0].display }}
                                 </option>
-
                                 {% endfor %}
-                                <option value="" disabled selected>Select</option>
-                                <option value="BP">Billing contact person</option>
-                                <option value="CP">Contact person</option>
-                                <option value="EP">Emergency contact person</option>
-                                <option value="PR">Person preparing referral</option>
-                                <option value="E">Employer</option>
-                                <option value="C">Emergency Contact</option>
-                                <option value="F">Federal Agency</option>
-                                <option value="I">Insurance Company</option>
-                                <option value="N">Next-of-Kin</option>
-                                <option value="S">State Agency</option>
-                                <option value="U">Unknown</option>
+                                <option value="Billing contact person">Billing contact person</option>
+                                <option value="Contact person">Contact person</option>
+                                <option value="Emergency contact person">Emergency contact person</option>
+                                <option value="Person preparing referral">Person preparing referral</option>
+                                <option value="Employer">Employer</option>
+                                <option value="Emergency Contact">Emergency Contact</option>
+                                <option value="Federal Agency">Federal Agency</option>
+                                <option value="Insurance Company">Insurance Company</option>
+                                <option value="Next-of-Kin">Next-of-Kin</option>
+                                <option value="State Agency">State Agency</option>
+                                <option value="Unknown">Unknown</option>
                             </select>
+
                         </div>
                     </div>
                 </div>
